# desal

./: CMakeLists.txt  TODO
include/: blood_properties.h  cell.h  cell_type.h  definitions.h  face.h  gauss_seidel.h  math_constants.h  math_conversions.h  matrix.h  matrix.hpp  mesh.h  numeric_constants.h  patch.h  point.h  triangle.h
src/: cell.cpp  connectivity.cpp  face.cpp  gauss_seidel.cpp  gradient.cpp  mesh.cpp  patch.cpp  point.cpp  read_mesh_gmsh.cpp  triangle.cpp
unittest/: CMakeLists.txt  cavity.cpp  cavity.geo
